--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,10 +5,11 @@
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
 	"features": {
-		"ghcr.io/devcontainers-contrib/features/black:2": {},
-		"ghcr.io/devcontainers-contrib/features/isort:2": {},
-		"ghcr.io/devcontainers-contrib/features/ruff:1": {}
-	}
+		"features": {
+			"ghcr.io/devcontainers-contrib/features/poetry:2": {},
+			"ghcr.io/jungaretti/features/make:1": {}
+		}
+	},
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
@@ -17,11 +18,17 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	 "postCreateCommand": "pip3 install --user -r requirements.txt",
+	 "postCreateCommand": "poetry install",
 
 	// Configure tool-specific properties.
 	 "customizations": {
 		"vscode": {
+			"settings": {
+				"[python]": {
+					"editor.defaultFormatter": "ms-python.black-formatter"
+				},
+				"python.formatting.provider": "black"
+			},
 			"extensions": [
 				"Codium.codium",
 				"GitHub.copilot",
@@ -36,7 +43,7 @@
 				"ms-toolsai.jupyter",
 				"mutantdino.resourcemonitor",
 				"piotrpalarz.vscode-gitignore-generator",
-				"sourcery.sourcery",
+				"sourcery.sourcery"
 			]
 		}
 	 }
