--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,70 +1,66 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-	"name": "Python 3",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
-	"features": {
-		"features": {
-			"ghcr.io/devcontainers-contrib/features/poetry:2": {},
-			"ghcr.io/jungaretti/features/make:1": {}
-		}
-	},
-	"runArgs": [
-		"-v", "${localEnv:USER}_devcontainer-extensions:/home/vscode/.vscode-server/extensions",
-		"-v", "${localEnv:USER}_devcontainer-commandhistory:/commandhistory"
-	],
+  "name": "forticlean",
 
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
+  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+  "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+  // Features to add to the dev container. More info: https://containers.dev/features.
+  "features": {
+    "ghcr.io/devcontainers-contrib/features/poetry:2": {},
+    "ghcr.io/jungaretti/features/make:1": {}
+  },
+  "mounts": [
+    "source=forticlean-bashhistory,target=/commandhistory,type=volume",
+    "source=forticlean_devcontainer,target=/home/vscode/.vscode-server/extensions"
+  ],
 
-	// Use 'postCreateCommand' to run commands after the container is created.
-	 "postCreateCommand": "poetry install",
+  // Use 'postCreateCommand' to run commands after the container is created.
+  "postCreateCommand": "poetry install",
 
-	// Configure tool-specific properties.
-	 "customizations": {
-		"vscode": {
-			"settings": {
-				"[python]": {
-					"editor.defaultFormatter": "ms-python.black-formatter"
-				},
-				"python.formatting.provider": "black"
-			},
-			"extensions": [
-				"Codium.codium",
-				"GSGBen.fortigate-fortios-syntax",
-				"GitHub.copilot",
-				"GitHub.copilot-chat",
-				"GitHub.copilot-labs",
-				"GitHub.vscode-github-actions",
-				"GitHub.vscode-pull-request-github",
-				"Gruntfuggly.todo-tree",
-				"KevinRose.vsc-python-indent",
-				"SonarSource.sonarlint-vscode",
-				"Tyriar.sort-lines",
-				"charliermarsh.ruff",
-				"esbenp.prettier-vscode",
-				"hbenl.vscode-test-explorer",
-				"ms-python.black-formatter",
-				"ms-python.flake8",
-				"ms-python.isort",
-				"ms-python.mypy-type-checker",
-				"ms-python.pylint",
-				"ms-python.python",
-				"ms-python.vscode-pylance",
-				"ms-python.vscode-pylance-typechecking",
-				"mutantdino.resourcemonitor",
-				"paulomenezes.duplicated-code",
-				"piotrpalarz.vscode-gitignore-generator",
-				"sourcery.sourcery",
-				"yzhang.markdown-all-in-one"
-			]
-		}
-	 }
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  // "forwardPorts": [],
 
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+  // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+  // "remoteUser": "vscode",
+
+  // Configure tool-specific properties.
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "[python]": {},
+        "python.formatting.provider": "black"
+      },
+      "extensions": [
+        "Codium.codium",
+        "GSGBen.fortigate-fortios-syntax",
+        "GitHub.copilot",
+        "GitHub.copilot-chat",
+        "GitHub.copilot-labs",
+        "GitHub.vscode-github-actions",
+        "GitHub.vscode-pull-request-github",
+        "Gruntfuggly.todo-tree",
+        "KevinRose.vsc-python-indent",
+        "SonarSource.sonarlint-vscode",
+        "Tyriar.sort-lines",
+        "charliermarsh.ruff",
+        "esbenp.prettier-vscode",
+        "hbenl.vscode-test-explorer",
+        "ms-python.black-formatter",
+        "ms-python.flake8",
+        "ms-python.isort",
+        "ms-python.mypy-type-checker",
+        "ms-python.pylint",
+        "ms-python.python",
+        "ms-python.vscode-pylance",
+        "ms-python.vscode-pylance-typechecking",
+        "mutantdino.resourcemonitor",
+        "paulomenezes.duplicated-code",
+        "piotrpalarz.vscode-gitignore-generator",
+        "sourcery.sourcery",
+        "yzhang.markdown-all-in-one"
+      ]
+    }
+  }
 }
