--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,8 +13,8 @@
   },
   "mounts": [
     "source=forticlean-bashhistory,target=/commandhistory,type=volume",
-    "source=forticlean_devcontainer,target=/home/vscode/.vscode-server/extensions",
-    "source=${env:HOME}${env:USERPROFILE}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
+    //"source=forticlean_devcontainer,target=/home/vscode/.vscode-server/extensions",
+    "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
   ],
 
   // Use 'postCreateCommand' to run commands after the container is created.
