--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,13 +35,38 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    name: Runs plugin tests
+    name: Runs application tests
     needs: run-lint
     steps:
       - id: git-checkout
         name: Checkout
         uses: actions/checkout@v3
 
-      - id: docker-test
-        name: Test the image
-        run: ./test.sh snapshot
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.11
+
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pypoetry
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-poetry-
+
+      - name: Install dependencies
+        run: |
+          poetry install
+
+      - name: Run tests
+        run: |
+          poetry run pytest
+
+      - name: Check application
+        run: |
+          poetry run forticlean --help
