more verbose ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
 
       - name: Run tests
         run: |
-          poetry run pytest
+          poetry run pytest -v
 
       - name: Check application
         run: |
