--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,17 @@
 [tool.poetry]
 name = "forticlean"
-version = "1.0.0"
-description = "Clean & sort FortiOS config files for operations & automation tasks."
+version = "0.0.0"  # this is a placeholder - version is set in the CI on release
+description = "Clean & sort FortiOS config files."
+homepage = "https://github.com/ryanmerolle/forticlean"
+documentation = "https://github.com/ryanmerolle/forticlean"
 authors = ["Ryan Merolle"]
 readme = "README.md"
 packages = [{include = "src"}]
+keywords = ["fortios", "python"]
+classifiers = [
+    "Intended Audience :: Developers",
+    "Programming Language :: Python :: 3.9",
+]
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -12,7 +19,7 @@ typer = {extras = ["all"], version = "*"}
 rich = "*"
 
 [tool.poetry.scripts]
-forticlean = "src.main:main"
+forticlean = "src.main:app"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
@@ -27,7 +34,7 @@ pre-commit = "*"
 pytest = "*"
 ruff = "*"
 sourcery-analytics = "*"
-sourcery-cli = "*"
+#sourcery-cli = "*"
 toml = "*"
 yamllint = "*"
 
