--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,13 +36,18 @@
           "[python]": {
             "editor.defaultFormatter": "ms-python.black-formatter",
             "venvFolders": ["venv", ".venv"],
-            "editor.formatOnSave": true
+            "editor.formatOnSave": true,
+            "files.trimTrailingWhitespace": true
           },
+          "[plaintext]": {
+            "files.trimTrailingWhitespace": false
+        },
           "editor.rulers": [80,100],
           "editor.bracketPairColorization.enabled": true,
           "editor.codeActionsOnSave": {
             "source.organizeImports": true
           },
+          "editor.trimAutoWhitespace": false,
           "extensions.autoCheckUpdates": true,
           "extensions.ignoreRecommendations": true,
           "files.insertFinalNewline": true,
@@ -57,7 +62,7 @@
           ],
           "python.formatting.provider": "black",
           "python.linting.enabled": true,
-          "python.linting.lintOnSave": true,
+          "python.linting.lintOnSave": false,
           "python.linting.pylintEnabled": true,
           "python.pythonPath": "/workspaces/forticlean/.venv/bin/python3",
           "python.terminal.activateEnvironment": true,
