--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,3 +78,7 @@ match_dir = '^(?!(venv|.venv)).*'
 exclude = ['venv', '.venv']
 pretty = true
 ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "WARN"
