--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ build-backend = "poetry.core.masonry.api"
 exclude_dirs = ["venv", ".venv"]
 
 [tool.black]
-exclude = "(venv, .venv)"
+line-length = 100
 
 [tool.isort]
 profile = "black"
@@ -62,7 +62,6 @@ line_length = 100
 
 [tool.ruff]
 line-length = 100
-exclude = [".venv"]
 
 [tool.ruff.pydocstyle]
 convention = "google"
