--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,8 @@ atomic = true
 line_length = 100
 
 [tool.flake8]
-line_length = 100
+max-line-length = 100
+max-complexity = 10
 
 [tool.ruff]
 line-length = 100
