--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,15 @@
   // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
   "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
 
+  "mounts": [
+    //"source=vscode-bashhistory,target=/home/vscode/.bash_history,type=volume",
+    //"source=vscode-extensions,target=/home/vscode/.vscode-server/extensions,type=volume"
+  ],
+  "containerEnv": {
+    "POETRY_VIRTUALENVS_IN_PROJECT": "true",
+    "HISTFILE": "/home/vscode/.bash_history"
+  },
+
   "features": {
     "ghcr.io/devcontainers-contrib/features/bandit:2": {},
     "ghcr.io/devcontainers-contrib/features/black:2": {},
@@ -22,7 +31,7 @@
   },
 
   // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "poetry config virtualenvs.in-project true && poetry install --with dev && exit",
+  "postCreateCommand": "poetry install --with dev && exit",
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   // "forwardPorts": [],
